--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack serve --mode development --open --hot",
-    "build": "webpack"
+    "build": "webpack",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,7 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
     "babel-loader": "^8.2.2",
+    "gh-pages": "^3.2.1",
     "html-webpack-plugin": "^5.3.1",
     "prettier": "2.3.1",
     "prettier-eslint": "^12.0.0",
