--- a/package.json
+++ b/package.json
@@ -43,7 +43,11 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.29.0",
+    "eslint-plugin-react": "^7.24.0",
     "gh-pages": "^3.2.1",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^27.0.4",
